# 59Music

./: .gitignore  59music.db-shm  59music.db-wal  CLAUDE.md  README.md  check_server.ps1  poll.ps1  启动步骤.md  设计文档v1(1).md
backend/: CMakeLists.txt  vcpkg.json
backend/src/: main.cpp
backend/src/database/: Database.cpp  Database.h
backend/src/models/: BackgroundInfo.h  PlayMode.h  PlayerState.h  SongInfo.h
backend/src/player/: AudioDecoder.cpp  AudioDecoder.h  PlayQueue.cpp  PlayQueue.h  PlayerEngine.cpp  PlayerEngine.h  miniaudio_impl.cpp
backend/src/scanner/: FileScanner.cpp  FileScanner.h  LibraryManager.cpp  LibraryManager.h  MetadataParser.cpp  MetadataParser.h
backend/src/server/: HttpServer.cpp  HttpServer.h  JsonHelper.h
backend/test/: audio_test_main.cpp  gen_test_wav.cpp  player_test_main.cpp  queue_test_main.cpp
docs/: API文档v1.md  开发计划v1.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: background.js  index.js  library.js  player.js  playlist.js  queue.js  request.js
frontend/src/composables/: useKeyboard.js  useSelection.js  useSortableRows.js  useWebSocket.js
frontend/src/mock/: data.js
frontend/src/router/: index.js
frontend/src/stores/: background.js  library.js  player.js  playlist.js
frontend/src/utils/: format.js
frontend/src/views/: BackgroundManageView.vue  LibraryView.vue  PlaylistDetailView.vue  PlaylistListView.vue  QueueView.vue  SettingsView.vue
